--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
 	"dependencies": {
 		"@beyonk/gdpr-cookie-consent-banner": "^12.1.0",
 		"@sanity/client": "^5.4.2",
-		"@sentry/profiling-node": "^8.7.0",
-		"@sentry/sveltekit": "^8.7.0",
+		"@sentry/svelte": "^8.36.0",
+		"@sentry/sveltekit": "^8.36.0",
 		"@supabase/ssr": "^0.3.0",
 		"@supabase/supabase-js": "^2.45.3",
 		"@tanstack/svelte-table": "^8.19.3",
