--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"postcss": "^8.4.22",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.4",
+		"prisma": "^5.21.1",
 		"sass": "^1.77.8",
 		"supabase": "^1.204.3",
 		"svelte": "^4.2.19",
@@ -45,6 +46,7 @@
 	"type": "module",
 	"dependencies": {
 		"@beyonk/gdpr-cookie-consent-banner": "^12.1.0",
+		"@prisma/client": "^5.21.1",
 		"@sanity/client": "^5.4.2",
 		"@sentry/svelte": "^8.36.0",
 		"@sentry/sveltekit": "^8.36.0",
