--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 	"dependencies": {
 		"@beyonk/gdpr-cookie-consent-banner": "^12.1.0",
 		"@prisma/client": "^5.21.1",
+		"@prisma/extension-accelerate": "^1.2.1",
 		"@sanity/client": "^5.4.2",
 		"@sentry/svelte": "^8.36.0",
 		"@sentry/sveltekit": "^8.36.0",
