--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
 		"@supabase/ssr": "^0.3.0",
 		"@supabase/supabase-js": "^2.45.3",
 		"@tanstack/svelte-table": "^8.19.3",
+		"@types/dompurify": "^3.0.5",
 		"@types/node": "^20.12.7",
 		"@vercel/speed-insights": "^1.0.12",
 		"animate.css": "^4.1.1",
 		"chart.js": "^4.4.4",
 		"cl-editor": "^2.3.0",
+		"dompurify": "^3.1.7",
 		"emoji-js": "^3.8.0",
 		"gsap": "^3.12.5",
 		"lucide-svelte": "^0.454.0",
