--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"svelte-check": "^3.4.3",
 		"svelte-eslint-parser": "^0.43.0",
 		"svelte-loading-spinners": "^0.3.6",
+		"svelte-preprocess": "^6.0.3",
 		"tailwindcss": "^3.3.1",
 		"tslib": "^2.3.1",
 		"typescript": "^5.6.3",
