--- a/package.json
+++ b/package.json
@@ -52,6 +52,11 @@
 		"@supabase/ssr": "^0.3.0",
 		"@supabase/supabase-js": "^2.45.3",
 		"@tanstack/svelte-table": "^8.19.3",
+		"@tinymce/tinymce-svelte": "^3.0.0",
+		"@tiptap/core": "^2.9.1",
+		"@tiptap/extension-text-align": "^2.9.1",
+		"@tiptap/extension-underline": "^2.9.1",
+		"@tiptap/starter-kit": "^2.9.1",
 		"@types/dompurify": "^3.0.5",
 		"@types/node": "^20.12.7",
 		"@vercel/speed-insights": "^1.0.12",
